   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
        - Updated the type of the digest value from String to array of 
          bytes. Reported and contributed by Kevin Conaway.
        - Fixed potential NPE in NIO caused by ByteUtils. Reporte by
          Bruce Lee.
    - API enhancements
        - Added a "tcpNoDelay" option for internal and Apache HTTP 
          clients. Contributed by Kevin Conaway.
        - Added a DigestRepresentation that allows to both use an 
          entity and compute its digest value. Suggested by Kevin 
          Conaway.
    - Misc
        - Updated JAX-RS API to version 1.0. The implementation of the
          runtime environment is not yet finished.
        
- 1.1 Release Candidate 2 (2008-09-24)
    - Bugs fixed
        - Fixed bug when a webapp is mounted on the root instead of 
          some context path. Reported by Bruno Dumon.
        - Fixed bug regarding the deeplyAccessible property for a 
          directory. Reported by Carlos Alexandre Moscoso.
        - Fixed GWT javascript recursion with the Engine#getInstance 
          method. Reported by Doug Alcouffe.
        - Fixed potential NPE with Spring integration when the 
          component is not declared in the servlet configuration file. 
          Reported by Alexander Koppelhuber.
        - Using a Engine.loadClass(), a ClassNotFound exception was
          not returning the missing class name. Reported by Vincent 
          Ricard.
        - Fixed potential NPE in Restlet constructor when Engine is
          missing. Reported by John Logdson.
        - Fixed parsing of the HTTP WWW-Authenticate header when no
          realm is provided. Reported by Roman Geus.
        - Now the caller's classloader is used to try to load classes
          to fix a regression introduced in 1.1 RC1. Reported by 
          Bruno Dumon.
        - Unknown challenge schemes used to hide the actual status of